diasom: Enable CONFIG_KEY_DH_OPERATIONS

--- a/arch/arm64/configs/diasom_imx8m_defconfig
+++ b/arch/arm64/configs/diasom_imx8m_defconfig
@@ -619,6 +619,7 @@ CONFIG_NLS_CODEPAGE_437=y
 CONFIG_NLS_CODEPAGE_866=y
 CONFIG_NLS_CODEPAGE_1251=y
 CONFIG_NLS_UTF8=y
+CONFIG_KEY_DH_OPERATIONS=y
 CONFIG_LSM="landlock,lockdown,yama,loadpin,safesetid,selinux,smack,tomoyo,apparmor,bpf"
 CONFIG_CRYPTO_CRC32C=y
 CONFIG_CRYPTO_CRC32=y
