--- a/arch/arm64/configs/diasom_rk35xx_defconfig
+++ b/arch/arm64/configs/diasom_rk35xx_defconfig
@@ -140,6 +140,8 @@ CONFIG_PCIEAER=y
 # CONFIG_PCIEASPM is not set
 # CONFIG_VGA_ARB is not set
 CONFIG_PCIE_ROCKCHIP_DW_HOST=y
+CONFIG_PCIE_ROCKCHIP_DW_EP=y
+CONFIG_PCI_ENDPOINT=y
 CONFIG_DEVTMPFS=y
 CONFIG_DEVTMPFS_MOUNT=y
 # CONFIG_STANDALONE is not set
